# Nmap Changelog ($Id$); -*-text-*-

o [NSE] Added additional checks for succesful put request in http-put. [Oleg Mitrofanov]

o [NSE] Added an update for http-methods that checks all possible methods not in Allow
  or Public header of OPTIONS response. [Gyanendra Mishra]

o [NSE] Added SLAXML, an XML Parser in lua Originally written by Gavin Kistner
  or Phrogz. [Gyanendra Mishra]

o [NSE] Added hnap-info, detects and outputs info for hnap devices. [Gyanendra Mishra]

o [NSE] Allow ssl-enum-ciphers to run on non-typical ports when it is selected
  by name. It will now send a service detection probe if the port is not a
  typical SSL port and version scan (-sV) was not used. [Daniel Miller]

o Fix Ncat listen mode on Solaris and other platforms where struct sockaddr
  does not have a sa_len member. This also affected use of the -p and -s
  options. Brandon Haberfeld reported the crash. [Daniel Miller]

o Report our https URL (https://nmap.org) in more places rather than
  our non-SSL one. [David Fifield]

o [NSE] Fix Diffie-Hellman parameter extraction in tls.lua. [Jacob Gajek]

o [NSE] Added http-webdav-scan, which detects WebDAV installations. [Gyanendra Mishra]

o [NSE] Remove ahbl.org checks from dnsbl.lua, since the service was shut down.
  [Forrest B.]

Nmap 6.49BETA1 [2015-06-03]

o Integrated all of your IPv4 OS fingerprint submissions from May 2014 to
  February 2015 (1900+ of them). Added 281 fingerprints, bringing the new total
  to 4766. Addtions include Linux 3.18, Windows 8.1, OS X 10.10, Android 5.0,
  FreeBSD 10.1, OpenBSD 5.6, and more. Highlights:
  http://seclists.org/nmap-dev/2015/q2/169 [Daniel Miller]

o Integrated all of your service/version detection fingerprints submitted from
  June 2013 to February 2015 (2500+ of them). The signature count soared over
  the 10000 mark, a 12% increase. We now detect 1062 protocols, from http,
  telnet, and ftp to jute, bgp, and slurm. Highlights:
  http://seclists.org/nmap-dev/2015/q2/171 [Daniel Miller]
